@@ -5,6 +5,7 @@ libtorrent_la_SOURCES = \
 	content/content.cc \
 	content/content.h \
 	content/content_file.h \
+	content/delegator_piece.h \
 	content/priority.cc \
 	content/priority.h \
 	data/file.cc \
